--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Kamran18.github.io/todo",
+  "homepage": "https://Kamran18.github.io/Todo",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
