--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
-    "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
